--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   flutter_email_sender: ^5.0.2
   geolocator: ^9.0.1
   http: ^1.2.2
-
+  responsive_framework: ^0.1.0
+  provider: ^6.0.5
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
