--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,13 +22,16 @@ dependencies:
   http: ^1.2.2
   responsive_framework: ^0.1.0
   provider: ^6.0.5
-  
+  json_annotation: ^4.9.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
 
 
 flutter:
